# apps

./: .env.dev  .env.prod  README.md  docker-compose.yaml  pyproject.toml  uwsgi.ini
apps/: models.py  serializers.py  urls.py  views.py
apps/management/commands/: initadmin.py
apps/migrations/: 0001_initial.py
core/: settings.py  urls.py
